--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -181,8 +181,8 @@ select {
 button,
 [type="button"],
 [type="reset"],
-[type="submit"] {
-  -webkit-appearance: button; }
+[type="submit"] 
+   
 
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
@@ -200,8 +200,8 @@ input[type="checkbox"] {
 input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
-input[type="month"] {
-  -webkit-appearance: listbox; }
+input[type="month"] 
+   
 
 textarea {
   overflow: auto;
@@ -233,7 +233,7 @@ progress {
 
 [type="search"] {
   outline-offset: -2px;
-  -webkit-appearance: none; }
+  }
 
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none; }
