--- a/css/css/bootstrap-reboot.css
+++ b/css/css/bootstrap-reboot.css
@@ -190,8 +190,8 @@ select {
 button,
 html [type="button"],
 [type="reset"],
-[type="submit"] {
-  -webkit-appearance: button; }
+[type="submit"] 
+ 
 
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
@@ -209,8 +209,8 @@ input[type="checkbox"] {
 input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
-input[type="month"] {
-  -webkit-appearance: listbox; }
+input[type="month"] 
+  
 
 textarea {
   overflow: auto;
@@ -242,7 +242,7 @@ progress {
 
 [type="search"] {
   outline-offset: -2px;
-  -webkit-appearance: none; }
+  }
 
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
